Don't try to use constexpr for lambda variable

Apparently lambdas are non-literal types before C++17, and Clang errors
about this after r332286.

TBR=thakis

Bug: 843046
Change-Id: I9ec058e9e4e74e418d36d1875f7e51bf0d1165c1
Reviewed-on: https://chromium-review.googlesource.com/1059111
Reviewed-by: Hans Wennborg <hans@chromium.org>
Commit-Queue: Hans Wennborg <hans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558648}
Former-commit-id: cbc92e1267e122ae6a835d4bfd4dfe5567ac3d76